--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+3
-
-  # permission_handler: ^8.2.5
+  permission_handler: ^8.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
