--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.8.4+3
   permission_handler: ^8.2.5
+  gallery_saver: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
